--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		/>
 		<title>Criminal Appeals Fund</title>
 	</head>
-	<body>
+	<body style="margin: 0; padding: 0;">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
